# microsociety

./: .gitignore  CMakeLists.txt  CMakeLists_with_tf.txt  Dockerfile  README.md
.github/workflows/: ci.yml
include/: AIController.hpp  ActionType.hpp  Actions.hpp  ClockGUI.hpp  Configuration.hpp  DataCollector.hpp  Entity.hpp  FlowerTile.hpp  Game.hpp  GrassTile.hpp  House.hpp  Market.hpp  MarketPanel.hpp  MoneyManager.hpp  MovablePanel.hpp  NPCEntity.hpp  Object.hpp  Player.hpp  PlayerEntity.hpp  QLearningAgent.hpp  SimulationConfig.hpp  StartupMenu.hpp  State.hpp  StoneTile.hpp  TFWrapper.hpp  TextureManager.hpp  Tile.hpp  TimeManager.hpp  UI.hpp  UIButton.hpp  debug.hpp
logs/: 2025-01-30_log.txt  2025-12-16_log.txt  crash_log.txt  simulation_log.txt  stats.json
models/: npc_dqn_model.h5  npc_rl_model.tflite  training_metadata.json
models/prototype/: convert_model.py  game_prototype.py  model.keras  model_validation.py  saved_model.keras  session_data_processor.py  test_environment.py  train_npc.py
models/visualisation/: micro_society_env.py
src/: Actions.cpp  ClockGUI.cpp  DataCollector.cpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  House.cpp  Market.cpp  MarketPanel.cpp  MoneyManager.cpp  MovablePanel.cpp  NPCEntity.cpp  Person.hpp  PlayerEntity.cpp  QLearningAgent.cpp  SimulationConfig.cpp  StartupMenu.cpp  TFWrapper.cpp  Tile.cpp  TimeManager.cpp  UI.cpp  UIButton.cpp  debug.cpp  main.cpp
tests/: test_actions.cpp  test_collision.cpp  test_entity.cpp  test_inventory.cpp  test_map_generation.cpp  test_market.cpp  test_npc_behavior.cpp  test_resource_collection.cpp  test_terrain.cpp  test_trading.cpp
